# tinylm

./: .gitignore  README.md  pyproject.toml
backend/: main.py  requirements.txt
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: AdvancedSettings.jsx  GenerateForm.jsx  Header.jsx  StoryOutput.jsx
transformer/: generate.py  loss.py  tokenizer.py  train.py  transformer.py
